[package]
name = "rust_winui"
version = "0.1.0"
authors = ["artiga033 <artiga033@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.17.0"
windows-app = "0.17.0"
bindings = { path = "bindings" }